# pyproject-fmt

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  diag-release-token.yml  docs.yml  release.yml  tag-release.yml
.planning/: INCIDENT-001-golden-file-contamination.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-core-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-cli-and-configuration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/03.1-golden-file-correction/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-RESEARCH.md  03.1-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: api.md  contributing.md  index.md
src/pypfmt/: __init__.py  __main__.py  cli.py  config.py  formatter.py  pipeline.py  sorter.py
src/pyproject_fmt/: __main__.py  cli.py  config.py  formatter.py  pipeline.py  sorter.py
tests/: conftest.py  test_config.py  test_integration.py  test_pipeline.py  test_pyproject_fmt.py
tests/fixtures/: after.toml  before.toml  golden.toml
