[project]
name = "pypfmt"
version = "0.1.0"
description = "A Python package to sort and format pyproject.toml"
readme = "README.md"
authors = [
    { name = "Jamie McGregor Nelson", email = "jamie@bitflight.io" },
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
keywords = []
requires-python = ">=3.11"
dependencies = [
    "taplo>=0.9.0",
    "toml-sort>=0.24.0,<0.25",
    "typer>=0.12.0",
]

[project.scripts]
pypfmt = "pypfmt.cli:app"

[project.urls]
Changelog = "https://github.com/bitflight-devops/pyproject-fmt/blob/main/CHANGELOG.md"
Documentation = "https://bitflight-devops.github.io/pyproject-fmt"
Homepage = "https://github.com/bitflight-devops/pyproject-fmt"
Issues = "https://github.com/bitflight-devops/pyproject-fmt/issues"
Repository = "https://github.com/bitflight-devops/pyproject-fmt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.16.3",
    "poethepoet>=0.32.0",
    "prek>=0.1.0",
    "pysentry-rs>=0.1.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
docs = [
    "mkdocs-material>=9.7.0",
    "mkdocs>=1.6.0",
    "mkdocstrings-python>=2.0.1",
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = ["src/pypfmt"]

[tool.git-cliff]
config = "cliff.toml"

[tool.hatch.build]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pypfmt"]

# Matrix testing across Python versions
[tool.hatch.envs.test]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-q",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "ERA", # eradicate
    "F",   # Pyflakes
    "I",   # isort
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["pypfmt"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001"]

[tool.ty.src]
include = ["**/*.py"]

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Run ruff linter"

[tool.poe.tasks.format-check]
cmd = "ruff format --check ."
help = "Check code formatting"

[tool.poe.tasks.format]
cmd = "ruff format ."
help = "Format code"

[tool.poe.tasks.type-check]
cmd = "ty check"
help = "Run ty type checker"

[tool.poe.tasks.verify]
sequence = ["lint", "format-check", "type-check"]
help = "Run all checks (lint, format-check, type-check)"

[tool.poe.tasks.fix]
sequence = [
    { cmd = "ruff check --fix ." },
    { cmd = "ruff format ." },
]
help = "Auto-fix lint and format issues"

[tool.poe.tasks.install]
cmd = "uv sync --all-groups"
help = "Install all dependencies"

[tool.poe.tasks.test]
cmd = "pytest tests/ -v"
help = "Run tests"

[tool.poe.tasks.test-cov]
cmd = "pytest --cov --cov-report=xml --cov-report=term-missing"
help = "Run tests with coverage"

[tool.poe.tasks.test-matrix]
cmd = "hatch test"
help = "Run tests across all Python versions"

[tool.poe.tasks.test-matrix-cov]
cmd = "hatch test --cover"
help = "Run tests with coverage across all Python versions"

[tool.poe.tasks.pysentry]
cmd = "pysentry-rs"
help = "Run dependency vulnerability scanning"

[tool.poe.tasks.docs]
cmd = "mkdocs build"
help = "Build documentation"

[tool.poe.tasks.docs-serve]
cmd = "mkdocs serve"
help = "Serve documentation locally"
